Fixed text hiding behind glass in pairing section

--- a/src/public/assets/styles/_glass-pairing.scss
+++ b/src/public/assets/styles/_glass-pairing.scss
@@ -41,6 +41,8 @@ $glass-pairing-section-padding: $mod-rhythm-4 * $px;
 .glass-pairing__quote {
   .sub {
     width: 50%;
+    position: relative;
+    z-index: $over-9000;
   }
 
   blockquote {
